# ci_template

./: .appveyor.yml  .doxygen.txt  .gitignore  .travis.yml  CMakeLists.txt  README.md
assets/shaders/: foo.frag
examples/: CMakeLists.txt
examples/lua/: CMakeLists.txt  lua_example.cpp
src/: CMakeLists.txt  hello.cpp  main.cpp
src/lua/: CMakeLists.txt
src/mathematics/: CMakeLists.txt
src/utils/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  FileSystem.hpp
src/utils/old/: filesystem_old.h
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: test_integration_main.cpp
